# march-madness

./: .gitignore  pyproject.toml  requirements.txt
src/: ad_hoc.py  app.py  bracket_analysis.py  enhanced_bracket_analysis.py  march_madness_2025.ipynb  matchup_gen.py  men_analysis.md
src/data_classes/bracket/: BracketGenerator.py  __init__.py  seed_slots.py  streamlit_app.py
src/data_classes/processing/: DataManager.py  EloRatingSystem.py  MLModel.py  Predictor.py  TeamStatsCalculator.py  TournamentVisualizer.py  __init__.py
src/output/: men_analysis.md
src/output/analysis/: matchup_1104_vs_1352.md  matchup_1112_vs_1103.md  matchup_1116_vs_1385.md  matchup_1124_vs_1181.md  matchup_1140_vs_1433.md  matchup_1140_vs_1458.md  matchup_1155_vs_1270.md  matchup_1161_vs_1268.md  matchup_1163_vs_1196.md  matchup_1163_vs_1328.md  matchup_1166_vs_1120.md  matchup_1179_vs_1403.md  matchup_1196_vs_1313.md  matchup_1211_vs_1208.md  matchup_1211_vs_1222.md  matchup_1222_vs_1188.md  matchup_1228_vs_1246.md  matchup_1235_vs_1252.md  matchup_1235_vs_1279.md  matchup_1242_vs_1116.md  matchup_1246_vs_1407.md  matchup_1257_vs_1166.md  matchup_1266_vs_1307.md  matchup_1268_vs_1213.md  matchup_1270_vs_1345.md  matchup_1272_vs_1161.md  matchup_1276_vs_1401.md  matchup_1276_vs_1471.md  matchup_1277_vs_1136.md  matchup_1280_vs_1124.md  matchup_1281_vs_1179.md  matchup_1307_vs_1277.md  matchup_1332_vs_1112.md  matchup_1332_vs_1251.md  matchup_1345_vs_1219.md  matchup_1385_vs_1303.md  matchup_1388_vs_1104.md  matchup_1388_vs_1435.md  matchup_1397_vs_1459.md  matchup_1401_vs_1463.md  (+78 more)
