[tool.poetry]
name = "march_madness"
version = "0.1.0"
description = "March Madness Prediction Project"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }, { include = "data" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
binarytree = "^6.5.1"
streamlit = "^1.30.0"
Pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
  | \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.env
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v"]

[tool.mypy]
mypy_path = ["src"]  # Set the root path here
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
